Add equipment